# Evolved_Todo_App

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  PHASE_IV_COMPLETION_GUIDE.md  QUICK_REFERENCE.md  README.md  START_BACKEND.md  Z_rough_work.txt  main.py  pyproject.toml  test_frontend_fixes.py  test_login_flow.py  test_password_fix.py
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  create_tables.py  pyproject.toml  requirements.txt  reset_db.py  setup.py  simple_test.py  test_db.py  verify_db_connection.py  verify_endpoints.py
backend/src/: database.py  main.py  monitoring.py  usage_tracking.py
backend/src/ai/: __init__.py  agent.py  agent_sdk.py  agent_sdk_groq_fix.py  client.py  config_sdk.py  handoffs.py  tools.py
backend/src/api/: __init__.py  auth.py  deps.py  health.py  logging_config.py  responses.py  tasks.py  users.py
backend/src/api/schemas/: enhanced_models.py
backend/src/api/v1/: __init__.py  api_router.py  auth.py  todos.py
backend/src/auth/: __init__.py  config.py  context.py  middleware.py  utils.py
backend/src/core/: exceptions.py  logging.py  metrics.py
backend/src/exceptions/: handlers.py
backend/src/middleware/: error_handler.py
backend/src/models/: __init__.py  base.py  conversation.py  message.py  migrations.py  responses.py  task.py  todo_item.py  user.py
backend/src/models/migrations/: alembic.ini  env.py  run_migrations.py
backend/src/models/migrations/versions/: 001_initial_tables.py  002_add_tags_column.py  003_add_chat_tables.py
backend/src/repositories/: base_repository.py  todo_repository.py  user_repository.py
backend/src/routes/: chat.py
backend/src/services/: __init__.py  auth_service.py  conversation_service.py  message_service.py  task_service.py  todo_service.py  user_service.py
backend/src/todo_mcp/: __init__.py  server.py  tools.py  transport.py
backend/src/utils/: auth.py  responses.py  security.py
backend/tests/: test_api.py  test_login.py  test_me.py  test_todos.py
backend/tests/unit/: test_auth.py  test_auth_utils.py  test_better_auth_integration.py  test_login_integration.py  test_mcp_tools.py  test_user_service.py
docs/: deployment-guide.md  kubernetes-overview.md  troubleshooting.md
frontend/: .dockerignore  .env.local.example  Dockerfile  components.json  deploy-to-vercel.sh.template  next.config.js  (+4 more)
(+254 files in other folders)
